--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -78,7 +78,7 @@
                 <h2>zzZZZZzzz</h2>
                 <p><strong>Last Updated: July 29, 2018</strong></p>
 
-                <p>When you use or interact with a U.S. website, mobile app or other digital service (each a “Digital Service”) operated or owned by <span class="property-name">Chron, a publication of Hearst Newspapers, LLC,</span>, we and third parties may obtain certain information about you.  In this Highlights section, we provide an overview of our privacy practices related to the Digital Services.  Please review our full <a href="../privacy_policy/">Privacy Notice</a> below for a detailed explanation of our practices.</p>
+                <p>When you use or interact with a U.S. website, mobile app or other digital service (each a “Digital Service”) operated or owned by <span class="property-name">XeroTalent Productions</span>, we and third parties may obtain certain information about you.  In this Highlights section, we provide an overview of our privacy practices related to the Digital Services.  Please review our full <a href="privacy.html">Privacy Notice</a> below for a detailed explanation of our practices.</p>
                 <h3>What Information We Obtain</h3>
 
                 <ul>
@@ -108,7 +108,7 @@
 
 
                 <ul>
-                    <li>Within the Hearst family of companies.</li>
+                    <li>Within the XeroTalent Productions family of companies.</li>
                     <li>With service providers that perform services or handle transactions on our behalf.</li>
                     <li>With advertisers, advertising- and marketing-related services providers and partners as well as companies that help us learn how you and others interact with our content.</li>
                     <li>With social media platforms and similar services, including when you interact with our Digital Services that integrate tools and services provided by social medial platforms. </li>
@@ -134,7 +134,7 @@
                     <li>We use a variety of security technologies and procedures to help protect information from unauthorized access, use or disclosure.</li>
                     <li>The Digital Services are operated from the United States.  Information may be processed and stored in the United States or other countries.  </li>
                     <li>The Digital Services are not intended for use by children under the age of 13.</li>
-                    <li>This Privacy Notice is part of the <a href="/terms_of_use/">Terms of Use</a>, which govern your use of the Digital Services and any disputes related to your use of the Digital Services (including our use of your information) will be resolved per the dispute resolution provision in the Terms of Use.</li>
+                    <li>This Privacy Notice is part of the <a href="terms.html">Terms of Use</a>, which govern your use of the Digital Services and any disputes related to your use of the Digital Services (including our use of your information) will be resolved per the dispute resolution provision in the Terms of Use.</li>
                     <li>If you are accessing the Digital Services from the European Economic Area, additional provisions may be relevant for you.  These are included at the end of this Privacy Notice.</li>
                 </ul>
 
@@ -143,7 +143,7 @@
                 <h3>Contact Us</h3>
 
 
-                <p>If you have questions about our Privacy Notice you can contact us by email at <a href="mailto:privacy@hearst.com">privacy@hearst.com</a>.</p>
+                <p>If you have questions about our Privacy Notice you can contact us by email at <a href="mailto:privacy@XeroTalent Productions.com">privacy@XeroTalent Productions.com</a>.</p>
 
                 <h3>PRIVACY NOTICE</h3>
 
@@ -171,7 +171,7 @@
                     <a name="introduction" id="introduction"></a>A.	INTRODUCTION
                 </h3>
 
-                <p>This Privacy Notice applies to the U.S. website, mobile application or other digital service (each a “Digital Service”) linking to this Privacy Notice and owned or operated by Chron, a publication of Hearst Newspapers, LLC, (“we”, “us”, “our” or “Hearst”).  This Privacy Notice describes the privacy practices of Hearst only and does not cover the practices of other companies, including those that may advertise or sponsor content, products or services on the Digital Services.</p>
+                <p>This Privacy Notice applies to the U.S. website, mobile application or other digital service (each a “Digital Service”) linking to this Privacy Notice and owned or operated by Chron, a publication of XeroTalent Productions, LLC, (“we”, “us”, “our” or “XeroTalent Productions”).  This Privacy Notice describes the privacy practices of XeroTalent Productions only and does not cover the practices of other companies, including those that may advertise or sponsor content, products or services on the Digital Services.</p>
 
                 <h3>B.	<a name="whatinformationweobtain" id="whatinformationweobtain"></a>WHAT INFORMATION WE OBTAIN</h3>
 
@@ -276,7 +276,7 @@
                 <p><strong>4.	To protect our rights or the rights of others.</strong>  This includes:</p>
 
                 <ul>
-                    <li>Detecting, preventing and responding to fraud or potentially illegal activities, misuse of the Digital Services, intellectual property infringement or other violations of law, this Privacy Notice, our Terms of Use or other Hearst policies. </li>
+                    <li>Detecting, preventing and responding to fraud or potentially illegal activities, misuse of the Digital Services, intellectual property infringement or other violations of law, this Privacy Notice, our Terms of Use or other XeroTalent Productions policies. </li>
                     <li>Performing audits, assessments and testing or troubleshooting activities. </li>
                     <li>Backing up our systems (including for disaster recovery purposes) and enhancing the overall security of the Digital Services.</li>
                     <li>Complying with and enforcing applicable industry and legal requirements (including legal process such as court orders, warrants or subpoenas) and fulfilling contractual obligations.</li>
@@ -288,7 +288,7 @@
 
                 <ol>
                     <li>
-                        <strong>Affiliates and Subsidiaries.</strong>  We work closely with affiliates and subsidiaries within the Hearst family of companies with whom we share your information as necessary or appropriate to operate the Digital Services.
+                        <strong>Affiliates and Subsidiaries.</strong>  We work closely with affiliates and subsidiaries within the XeroTalent Productions family of companies with whom we share your information as necessary or appropriate to operate the Digital Services.
                     </li>
                     <li>
                         <strong>Service Providers.</strong>  In connection with the operation and provision of the Digital Services, we engage various third parties to provide services or handle transactions on our behalf, such as payment card processing, email distribution, list processing, postal mailing, cloud computing, analytics, digital content performance measurement, ad serving and managing sweepstakes, contests, promotions or events.  These service providers use the information we provide to them as necessary or appropriate for the performance of their services.
@@ -356,7 +356,7 @@
                         <strong> Opt-out Cookies. </strong>You can follow the instructions provided by the Digital Advertising Alliance (“DAA”) <a href="http://optout.aboutads.info">here</a> and/or the Network Advertising Initiative (“NAI”) <a href="http://optout.networkadvertising.org">here</a> to place an opt-out cookie on your browser. These opt-out cookies enable you to block participating companies from installing future cookies on your computer or browser.
                         <ul>
                             <li>If you place opt-out cookies but subsequently clear or delete cookies on your computer or device browser, your opt-out cookies may be deleted and you may have to renew your opt- out choices for that specific browser.</li>
-                            <li>The opt-out mechanisms offered by the DAA and NAI are provided by third parties. Hearst does not control or operate these mechanisms or the choices provided through these mechanisms.</li>
+                            <li>The opt-out mechanisms offered by the DAA and NAI are provided by third parties. XeroTalent Productions does not control or operate these mechanisms or the choices provided through these mechanisms.</li>
                         </ul>
                     </li>
                 </ol>
@@ -398,11 +398,11 @@
 
 
                 <p><strong>Your California Privacy Rights</strong></p>
-                <p>Residents of California may request a list of third parties to which certain personal information (as defined by applicable California law) obtained through a Digital Service was disclosed by Hearst during the preceding year for those third parties’ direct marketing purposes. If you are a California resident and want such a list, please contact us at Office of General Counsel, Attn: Privacy, 300 West 57th Street, New York, NY 10019. For all requests, you must put the statement “Your California Privacy Rights” in the body of your request, as well as your name, street address, city, state, and zip code. In your request, you need to attest to the fact that you are a California resident and provide a current California address for our response. Please also indicate in your request the name of the Digital Service to which your request applies. Please note that we will not accept requests via the telephone, email, or by facsimile, and we are not responsible for notices that are not labeled or sent properly, or that do not have complete information.</p>
+                <p>Residents of California may request a list of third parties to which certain personal information (as defined by applicable California law) obtained through a Digital Service was disclosed by XeroTalent Productions during the preceding year for those third parties’ direct marketing purposes. If you are a California resident and want such a list, please contact us at Office of General Counsel, Attn: Privacy, 300 West 57th Street, New York, NY 10019. For all requests, you must put the statement “Your California Privacy Rights” in the body of your request, as well as your name, street address, city, state, and zip code. In your request, you need to attest to the fact that you are a California resident and provide a current California address for our response. Please also indicate in your request the name of the Digital Service to which your request applies. Please note that we will not accept requests via the telephone, email, or by facsimile, and we are not responsible for notices that are not labeled or sent properly, or that do not have complete information.</p>
 
                 <p><strong> Do Not Track</strong></p>
 
-                <p>Hearst does not currently take steps to respond to browsers “Do Not Track” signals as no uniform standard to respond to such signals has been developed at this time.</p>
+                <p>XeroTalent Productions does not currently take steps to respond to browsers “Do Not Track” signals as no uniform standard to respond to such signals has been developed at this time.</p>
 
                 <h3>G.	<a name="howweprotectyourinformation" id="howweprotectyourinformation"></a>HOW WE PROTECT YOUR INFORMATION</h3>
 
@@ -420,7 +420,7 @@
 
                 <h3>J.	<a name="linkstothirdpartywebsites" id="linkstothirdpartywebsites"></a>LINKS TO THIRD-PARTY WEBSITES, MOBILE APPS OR OTHER SERVICES</h3>
 
-                <p>The Digital Services may contain links to websites, mobile apps or other services operated by companies not affiliated with Hearst.  In addition, the Digital Services may be made available to you through third-party platforms (such as app stores or Social Media Platforms) or other channels.  We are not responsible for the privacy practices of any non-Hearst operated websites, mobile apps or other services and channels, and we encourage you to review the privacy policies or notices published by relevant third parties.</p>
+                <p>The Digital Services may contain links to websites, mobile apps or other services operated by companies not affiliated with XeroTalent Productions.  In addition, the Digital Services may be made available to you through third-party platforms (such as app stores or Social Media Platforms) or other channels.  We are not responsible for the privacy practices of any non-XeroTalent Productions operated websites, mobile apps or other services and channels, and we encourage you to review the privacy policies or notices published by relevant third parties.</p>
 
                 <h3>K.	<a name="careers" id="careers"></a>CAREERS/JOB OPPORTUNITIES </h3>
 
@@ -429,7 +429,7 @@
                 <h3>L.	<a name="disputeresolution" id="disputeresolution"></a>DISPUTE RESOLUTION/TERMS OF USE</h3>
 
 
-                <p>Any dispute concerning the Digital Services (including our use of your personal information) will be resolved per the dispute resolution provision in the <a href="/terms_of_use/">Terms of Use</a>, which govern your use of the Digital Services.  Please take a few minutes to read the Terms of Use before using the Digital Services.</p>
+                <p>Any dispute concerning the Digital Services (including our use of your personal information) will be resolved per the dispute resolution provision in the <a href="terms.html">Terms of Use</a>, which govern your use of the Digital Services.  Please take a few minutes to read the Terms of Use before using the Digital Services.</p>
 
                 <h3>M.	<a name="changestothisprivacynotice" id="changestothisprivacynotice"></a>CHANGES TO THIS PRIVACY NOTICE</h3>
 
@@ -439,16 +439,16 @@
                 <h3>N.	<a name="contactus" id="contactus"></a>CONTACT US</h3>
 
 
-                <p>If you have any questions about this Privacy Notice, please contact us by email at <a href="mailto:privacy@hearst.com">privacy@hearst.com</a>.</p>
+                <p>If you have any questions about this Privacy Notice, please contact us by email at <a href="mailto:privacy@XeroTalent Productions.com">privacy@XeroTalent Productions.com</a>.</p>
 
                 <h3>O.	<a name="additionalinformationforeuropeanvisitors" id="-morrwhwcbozwbtcfaohwcbtcfsifcdsobjwgwhcfg" x-enc="id"></a>ADDITIONAL INFORMATION FOR EUROPEAN VISITORS</h3>
 
 
-                <p>In order to address our legal obligations in Europe (including the UK), Hearst provides the following additional information for Europe-based visitors to Hearst's U.S. Digital Services.</p>
+                <p>In order to address our legal obligations in Europe (including the UK), XeroTalent Productions provides the following additional information for Europe-based visitors to XeroTalent Productions's U.S. Digital Services.</p>
 
                 <h3>Who is Responsible for Your Information?</h3>
 
-                <p>If you use or interact with a Hearst U.S. Digital Service then the data controller will be the entity listed at the top of this Privacy Notice. The contact details for this entity are provided in the “Contact Us” section above.</p>
+                <p>If you use or interact with a XeroTalent Productions U.S. Digital Service then the data controller will be the entity listed at the top of this Privacy Notice. The contact details for this entity are provided in the “Contact Us” section above.</p>
 
                 <p><strong>Legal Bases for Using Your Information</strong></p>
 
@@ -475,7 +475,7 @@
                     In certain circumstances, you have a right to access or object to the use of personal information held about you (including in relation to direct marketing).  You can also ask us to rectify, update, erase, restrict or to share your information in a usable format with another company.  Such requests are subject to applicable law.
                     We encourage you to contact us to update or correct your information if it changes or if the personal information we hold about you is inaccurate.
                 </p>
-                <p>If you would like to discuss or exercise such rights, please contact us at <a href="mailto:datarequestsnewspapers@hearst.com">datarequestsnewspapers@hearst.com</a>.  We will contact you if we need additional information from you in order to honor your requests.</p>
+                <p>If you would like to discuss or exercise such rights, please contact us at <a href="mailto:datarequestsnewspapers@XeroTalent Productions.com">datarequestsnewspapers@XeroTalent Productions.com</a>.  We will contact you if we need additional information from you in order to honor your requests.</p>
 
                 <p><strong>Storing Your Information </strong></p>
 
@@ -501,7 +501,7 @@
 
                 <h3>Privacy Officer and Complaints</h3>
 
-                <p>Our Privacy Officer can be contacted at <a href="mailto:privacy@hearst.com">privacy@hearst.com</a>.</p>
+                <p>Our Privacy Officer can be contacted at <a href="mailto:privacy@XeroTalent Productions.com">privacy@XeroTalent Productions.com</a>.</p>
 
                 <p>We are committed to working with you to obtain a fair resolution in the event you have a complaint or concern about privacy. If, however, you believe that we have not been able to assist with your complaint or concern, you have the right to make a complaint to a data protection authority.</p>
             </div>
